<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:text="@string/welcome"
        android:textColor="@color/colorViettelGreen"
        android:textSize="30sp"
        tools:fontFamily="casual"
        android:layout_alignParentStart="true" />
    <ImageView
        android:id="@+id/iv_icon"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:foregroundGravity="center_horizontal"
        android:layout_below="@id/tv_welcome"
        android:contentDescription="@string/viettel_logo" />
    <Button
        android:id="@+id/btn_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/colorViettelOrange"
        android:text="@string/login"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/iv_icon"/>
    <Button
        android:id="@+id/btn_register"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/colorViettelOrange"
        android:text="@string/newUser"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_login"/>


</RelativeLayout>