<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context=".java.activity.MenuActivity">
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <ImageView
          android:id="@+id/iv_image"
          android:layout_width="360dp"
          android:layout_height="480dp"
          android:layout_centerHorizontal="true"
          android:contentDescription="@string/user_face_image" />

      <Button
          android:id="@+id/btn_upload"
          android:layout_width="175dp"
          android:layout_height="wrap_content"
          android:layout_centerHorizontal="true"
          android:layout_below="@id/iv_image"
          android:layout_marginTop="50dp"
          android:text="@string/upload_image"
          android:textSize="20sp"
          android:textColor="#FFFFFF"
          android:background="@color/colorViettelGreen"/>
      <Button
          android:id="@+id/btn_start"
          android:layout_width="175dp"
          android:layout_height="wrap_content"
          android:layout_centerHorizontal="true"
          android:layout_below="@id/btn_upload"
          android:layout_marginTop="25dp"
          android:text="@string/start"
          android:textSize="20sp"
          android:textColor="#FFFFFF"
          android:background="@color/colorViettelGreen"/>
      <Button
          android:id="@+id/btn_logout"
          android:layout_width="175dp"
          android:layout_height="wrap_content"
          android:layout_centerHorizontal="true"
          android:layout_below="@id/btn_start"
          android:layout_marginTop="25dp"
          android:text="@string/log_out"
          android:textSize="20sp"
          android:textColor="#FFFFFF"
          android:background="@color/colorViettelGreen"/>
  </RelativeLayout>
</ScrollView>