<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/register"
            android:textColor="@color/colorViettelOrange"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"/>
        <TextView
            android:id="@+id/tv_email"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_intro"
            android:text="@string/email_address"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@color/colorViettelGreen"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/et_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/tv_email"
            android:layout_alignBaseline="@id/tv_email"
            android:textSize="20sp"
            android:textColor="@color/colorViettelOrange"
            android:hint="@string/input_email_address"
            android:inputType="textEmailAddress"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/tv_username"
            android:autofillHints="Input your Email Address"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_email"
            android:layout_alignParentStart="false"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="25dp"
            android:text="@string/inputUsername"
            android:textColor="@color/colorViettelGreen"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tv_username"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_toEndOf="@id/tv_username"
            android:layout_toRightOf="@id/tv_username"
            android:autofillHints="@string/inputUsername"
            android:hint="@string/inputUsername"
            android:inputType="text"
            android:textColor="@color/colorViettelOrange"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/tv_password"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/inputPassword"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false"
            android:layout_below="@id/tv_username"
            android:textColor="@color/colorViettelGreen"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/et_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/tv_password"
            android:layout_alignBaseline="@id/tv_password"
            android:layout_below="@id/et_username"
            android:textSize="20sp"
            android:textColor="@color/colorViettelOrange"
            android:hint="@string/inputPassword"
            android:inputType="textPassword"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/tv_password" />
        <TextView
            android:id="@+id/tv_RePassword"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/reInputPassword"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false"
            android:layout_below="@id/tv_password"
            android:textColor="@color/colorViettelGreen"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/et_reEnterPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/tv_RePassword"
            android:layout_alignBaseline="@id/tv_RePassword"
            android:layout_below="@id/et_password"
            android:textSize="20sp"
            android:textColor="@color/colorViettelOrange"
            android:hint="@string/reInputPassword"
            android:inputType="textPassword"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/tv_RePassword" />
        <TextView
            android:id="@+id/tv_phoneNumber"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/inputPhone"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false"
            android:layout_below="@id/tv_RePassword"
            android:textColor="@color/colorViettelGreen"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/et_phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/tv_phoneNumber"
            android:layout_alignBaseline="@id/tv_phoneNumber"
            android:layout_below="@id/et_reEnterPassword"
            android:textSize="20sp"
            android:textColor="@color/colorViettelOrange"
            android:hint="@string/inputPhone"
            android:inputType="textEmailAddress"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/tv_phoneNumber"
            tools:ignore="TextFields" />

        <TextView
            android:id="@+id/tv_age"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/inputAge"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false"
            android:layout_below="@id/tv_phoneNumber"
            android:textColor="@color/colorViettelGreen"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/tv_pick_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/tv_age"
            android:layout_alignBaseline="@id/tv_age"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/tv_age"
            android:textColor="@color/colorViettelOrange"
            android:textSize="20sp">

        </TextView>

        <TextView
            android:id="@+id/tv_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_below="@id/tv_age"
            android:layout_alignParentStart="false"
            android:layout_alignParentLeft="true"
            android:text="@string/inputGender"
            android:textColor="@color/colorViettelGreen"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/rg_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_pick_age"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="25dp"
            android:gravity="center_horizontal"
            android:layout_toEndOf="@id/tv_gender"
            android:layout_toRightOf="@id/tv_gender"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/colorViettelOrange"
                android:text="@string/male"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/rb_female"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/colorViettelOrange"
                android:text="@string/female"
                android:textSize="20sp" />

        </RadioGroup>
        <Button
            android:id="@+id/btn_register"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_gender"
            android:layout_marginTop="50dp"
            android:background="@color/colorViettelOrange"
            android:text="@string/newUser"
            android:textSize="25sp"
            android:textColor="#FFFFFF"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

</ScrollView>