<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

<TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_email_address"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/colorViettelOrange"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/tv_email"
        android:layout_alignBaseline="@id/tv_email"
        android:textSize="20sp"
        android:textColor="@color/colorViettelGreen"
        android:hint="@string/input_email_address"
        android:inputType="textEmailAddress"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/tv_email" />
    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/inputPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_below="@id/tv_email"
        android:textColor="@color/colorViettelOrange"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/tv_password"
        android:layout_alignBaseline="@id/tv_password"
        android:layout_below="@id/et_email"
        android:textSize="20sp"
        android:textColor="@color/colorViettelGreen"
        android:hint="@string/inputPassword"
        android:inputType="textPassword"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/tv_password" />
    <Button
        android:id="@+id/btn_login"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_password"
        android:layout_marginTop="50dp"
        android:background="@color/colorViettelGreen"
        android:text="@string/login"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/btn_register"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:layout_marginTop="30dp"
        android:background="@color/colorViettelGreen"
        android:text="@string/newUser"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>